Improved CLI